# cookiecutter-pypoetry

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/: run.py
