[tool.black]
line-length = 120

[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_mail}}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[tool.poetry.scripts]
start = "{{cookiecutter.module_name}}.run:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
